# subsonic

./: .env  Cargo.toml  build.rs
schemas/: subsonic-rest-api-1.16.1.xsd
src/: lib.rs
